--- a/views/index.jade
+++ b/views/index.jade
@@ -3,3 +3,9 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+
+  //
+    form(action="/", method="post", enctype="multipart/form-data")
+      input(type="file", name="movie", id="movie")
+
+  div#holder
