--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,5 +3,7 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    script(src="/javascripts/jquery-2.1.4.min.js")
+    script(src="/javascripts/app.js")
   body
     block content
