--- a/app/css/app.css
+++ b/app/css/app.css
@@ -7,22 +7,22 @@ body {
   -webkit-app-region: drag;
   overflow: hidden;
 }
-#description {
-  transition: margin 400ms cubic-bezier(0.165, 0.84, 0.44, 1);
-}
-#description b {
-  font-weight: 900;
-  font-size: 90%;
+button {
+  -webkit-app-region: no-drag;
 }
 body.dragging #description {
   margin-top: -70px;
 }
-#description,
+#description {
+  pointer-events: none;
+  transition: margin 400ms cubic-bezier(0.165, 0.84, 0.44, 1);
+}
 #description * {
   pointer-events: none;
 }
-button {
-  -webkit-app-region: no-drag;
+#description b {
+  font-weight: 900;
+  font-size: 90%;
 }
 .demo-card-square.mdl-card {
   width: 320px;
@@ -50,10 +50,15 @@ button {
   position: relative;
   color: #fff;
 }
+.mdl-card__title.small {
+  height: 120px;
+  /* fix for bigger list */
+}
 .mdl-card__title h1 {
   padding-left: 0;
   padding-right: 0;
 }
+/* TODO UNUSED?
 .subtitle-icon {
   font-size: 90px;
   margin-top: 1px;
@@ -61,6 +66,7 @@ button {
   right: 10px;
   bottom: 0;
 }
+*/
 #logo {
   background-image: url(../images/porkolt160.jpg);
   background-size: 100% 100%;
@@ -71,21 +77,45 @@ button {
   overflow: hidden;
   margin-left: 5px;
 }
+#queue {
+  overflow: scroll;
+  transition: height 400ms cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+body.dragging #queue {
+  height: 0;
+}
 #list {
   padding-left: 0;
-  font-size: 12px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 #list li {
   list-style: none;
+  font-size: 12px;
 }
 #list li i {
   float: right;
-  width: 32px;
   text-align: right;
+  font-size: 18px;
 }
 #list li span {
-  width: -webkit-calc(68%);
+  width: -webkit-calc(90%);
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  display: inline-block;
+}
+@-webkit-keyframes rotating {
+  from {
+    -webkit-transform: rotate(360deg);
+  }
+  to {
+    -webkit-transform: rotate(0deg);
+  }
+}
+.rotating {
+  -webkit-animation: rotating 2s linear infinite;
+}
+.mdl-card__actions {
+  flex-shrink: 0;
 }
