--- a/app/css/app.less
+++ b/app/css/app.less
@@ -10,22 +10,18 @@ body {
   -webkit-app-region: drag;
   overflow:hidden;
 }
+
+button { -webkit-app-region: no-drag; }
+
+body.dragging #description { margin-top: -70px; }
 #description {
+  pointer-events: none;
   transition: margin 400ms cubic-bezier(0.165, 0.840, 0.440, 1.000);
+  * { pointer-events: none; }
   b {
     font-weight: 900;
     font-size: 90%;
   }
-}
-
-body.dragging #description { margin-top: -70px; }
-#description,
-#description * {
-  pointer-events: none;
-}
-
-button {
-  -webkit-app-region: no-drag;
 }
 
 .demo-card-square.mdl-card {
@@ -52,11 +48,13 @@ button {
 .mdl-card__title {
   position: relative;
   color: #fff;
+  &.small { height: 120px; /* fix for bigger list */ }
   h1 {
     padding-left: 0;
     padding-right: 0;
   }
 }
+/* TODO UNUSED?
 .subtitle-icon {
   font-size: 90px;
   margin-top: 1px;
@@ -64,6 +62,8 @@ button {
   right: 10px;
   bottom: 0;
 }
+*/
+
 #logo {
   background-image: url(../images/porkolt160.jpg);
   background-size: 100% 100%;
@@ -74,21 +74,49 @@ button {
   overflow: hidden;
   margin-left: 5px;
 }
+#queue {
+  overflow: scroll;
+  transition: height 400ms cubic-bezier(0.165, 0.840, 0.440, 1.000);
+}
+body.dragging {
+  #queue {
+    height: 0;
+    //margin-top: -408px;
+  }
+}
 #list {
   padding-left: 0;
-  font-size: 12px;
+  margin-top: 0;
+  margin-bottom: 0;
+
   li {
     list-style: none;
+    font-size: 12px;
+
     i {
       float: right;
-      width: 32px;
       text-align: right;
+      font-size: 18px;
     }
     span {
-      width: -webkit-calc(100% - 32px);
+      width: -webkit-calc(100% - 10px);
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
+      display: inline-block;
     }
   }
+}
+@-webkit-keyframes rotating {
+  from { -webkit-transform: rotate(360deg); }
+  to { -webkit-transform: rotate(0deg);
+  }
+}
+
+.rotating {
+  -webkit-animation: rotating 2s linear infinite;
+}
+
+.mdl-card__actions {
+  flex-shrink: 0;
 }
