--- a/app/font/material.css
+++ b/app/font/material.css
@@ -1,3 +1,4 @@
+/* more details at http://google.github.io/material-design-icons/ */
 @font-face {
 	font-family: 'Material Icons';
 	font-style: normal;
@@ -8,4 +9,28 @@
 	url(../node_modules/material-design-icons/iconfont/MaterialIcons-Regular.woff2) format('woff2'),
 	url(../node_modules/material-design-icons/iconfont/MaterialIcons-Regular.woff) format('woff'),
 	url(../node_modules/material-design-icons/iconfont/MaterialIcons-Regular.ttf) format('truetype');
+}
+.material-icons {
+	font-family: 'Material Icons';
+	font-weight: normal;
+	font-style: normal;
+	font-size: 18px;  /* Preferred icon size */
+	display: inline-block;
+	width: 1em;
+	height: 1em;
+	line-height: 1;
+	text-transform: none;
+	letter-spacing: normal;
+	word-wrap: normal;
+
+	/* Support for all WebKit browsers. */
+	-webkit-font-smoothing: antialiased;
+	/* Support for Safari and Chrome. */
+	text-rendering: optimizeLegibility;
+
+	/* Support for Firefox. */
+	-moz-osx-font-smoothing: grayscale;
+
+	/* Support for IE. */
+	font-feature-settings: 'liga';
 }
