--- a/app/css/app.less
+++ b/app/css/app.less
@@ -120,3 +120,10 @@ body.dragging {
 .mdl-card__actions {
   flex-shrink: 0;
 }
+.mdl-spinner--small {
+  width: 10px;
+  height: 10px;
+  .mdl-spinner__circle {
+    border-width: 1px;
+  }
+}
