--- a/app/css/app.less
+++ b/app/css/app.less
@@ -98,7 +98,7 @@ body.dragging {
       text-align: right;
       font-size: 18px;
     }
-    span {
+    .movie-title {
       width: -webkit-calc(100% - 10px);
       white-space: nowrap;
       overflow: hidden;
@@ -120,10 +120,10 @@ body.dragging {
 .mdl-card__actions {
   flex-shrink: 0;
 }
-.mdl-spinner--small {
-  width: 10px;
-  height: 10px;
+.movie-status {
+  width: 14px;
+  height: 14px;
   .mdl-spinner__circle {
-    border-width: 1px;
+    border-width: 2px;
   }
 }
