--- a/app/css/app.css
+++ b/app/css/app.css
@@ -98,7 +98,7 @@ body.dragging #queue {
   text-align: right;
   font-size: 18px;
 }
-#list li span {
+#list li .movie-title {
   width: -webkit-calc(90%);
   white-space: nowrap;
   overflow: hidden;
@@ -119,10 +119,10 @@ body.dragging #queue {
 .mdl-card__actions {
   flex-shrink: 0;
 }
-.mdl-spinner--small {
-  width: 10px;
-  height: 10px;
+.movie-status {
+  width: 14px;
+  height: 14px;
 }
-.mdl-spinner--small .mdl-spinner__circle {
-  border-width: 1px;
+.movie-status .mdl-spinner__circle {
+  border-width: 2px;
 }
