--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,72 +1,59 @@
 /* San Francisco font */
-@import '../font/usesf.css';
+@import url(../font/usesf.css);
 /* Material Design Icons */
-@import '../font/material.css';
+@import url(../font/material.css);
 /* App design */
 body {
   -webkit-app-region: drag;
-  overflow: hidden;
-}
+  overflow: hidden; }
+
 button {
-  -webkit-app-region: no-drag;
-}
-body.dragging #description {
-  margin-top: -70px;
-}
-#description {
+  -webkit-app-region: no-drag; }
+
+body.dragging #section-description {
+  margin-top: -70px; }
+
+#section-description {
   pointer-events: none;
-  transition: margin 400ms cubic-bezier(0.165, 0.84, 0.44, 1);
-}
-#description * {
-  pointer-events: none;
-}
-#description b {
-  font-weight: 900;
-  font-size: 90%;
-}
+  transition: margin 400ms cubic-bezier(0.165, 0.84, 0.44, 1); }
+  #section-description * {
+    pointer-events: none; }
+  #section-description b {
+    font-weight: 900;
+    font-size: 90%; }
+
 .demo-card-square.mdl-card {
   width: 320px;
   height: 320px;
-  border-radius: 0;
-}
+  border-radius: 0; }
+
 .demo-card-square > .mdl-card__title,
 .demo-card-square > .mdl-card__dropfiles {
   color: #fff;
-  background: bottom right 15% no-repeat #46b6ac;
-}
+  background: bottom right 15% no-repeat #46B6AC; }
+
 .mdl-card__dropfiles {
   text-align: center;
   /*display: none;*/
   position: absolute;
   width: 290px;
   top: -50px;
-  transition: all 400ms cubic-bezier(0.165, 0.84, 0.44, 1);
-}
+  transition: all 400ms cubic-bezier(0.165, 0.84, 0.44, 1); }
+
 .dragging .mdl-card__dropfiles {
   /*display: inline-block;*/
-  top: 10px;
-}
+  top: 10px; }
+
 .mdl-card__title {
   position: relative;
-  color: #fff;
-}
-.mdl-card__title.small {
-  height: 120px;
-  /* fix for bigger list */
-}
-.mdl-card__title h1 {
-  padding-left: 0;
-  padding-right: 0;
-}
-/* TODO UNUSED?
-.subtitle-icon {
-  font-size: 90px;
-  margin-top: 1px;
-  position: absolute;
-  right: 10px;
-  bottom: 0;
-}
-*/
+  color: #fff; }
+  .mdl-card__title.small {
+    height: 120px;
+    /* fix for bigger list */ }
+  .mdl-card__title h1 {
+    padding-left: 0;
+    padding-right: 0; }
+
 #logo {
   background-image: url(../images/porkolt160.jpg);
   background-size: 100% 100%;
@@ -75,54 +62,89 @@ body.dragging #description {
   text-indent: 100%;
   white-space: nowrap;
   overflow: hidden;
-  margin-left: 5px;
-}
-#queue {
+  margin-left: 5px; }
+
+#section-queue {
   overflow: scroll;
-  transition: height 400ms cubic-bezier(0.165, 0.84, 0.44, 1);
-}
+  transition: height 400ms cubic-bezier(0.165, 0.84, 0.44, 1); }
+
 body.dragging #queue {
-  height: 0;
-}
+  height: 0; }
+
+#section-language {
+  flex-shrink: 0; }
+
 #list {
   padding-left: 0;
   margin-top: 0;
-  margin-bottom: 0;
-}
-#list li {
-  list-style: none;
-  font-size: 12px;
-}
-#list li i {
-  float: right;
-  text-align: right;
-  font-size: 18px;
-}
-#list li .movie-title {
-  width: -webkit-calc(90%);
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: inline-block;
-}
+  margin-bottom: 0; }
+  #list li {
+    list-style: none;
+    font-size: 14px; }
+    #list li i {
+      float: right;
+      text-align: right;
+      font-size: 20px;
+      margin-top: 1px; }
+    #list li .movie-title {
+      width: -webkit-calc(100% - 32px);
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      display: inline-block; }
+    #list li .mdl-js-spinner {
+      width: 16px;
+      height: 16px;
+      margin-bottom: 3px; }
+      #list li .mdl-js-spinner .mdl-spinner__circle {
+        border-width: 2px; }
+
 @-webkit-keyframes rotating {
   from {
-    -webkit-transform: rotate(360deg);
-  }
+    -webkit-transform: rotate(360deg); }
+
   to {
-    -webkit-transform: rotate(0deg);
-  }
-}
+    -webkit-transform: rotate(0deg); } }
+
 .rotating {
-  -webkit-animation: rotating 2s linear infinite;
-}
-.mdl-card__actions {
-  flex-shrink: 0;
-}
-.movie-status {
-  width: 14px;
-  height: 14px;
-}
-.movie-status .mdl-spinner__circle {
-  border-width: 2px;
-}
+  -webkit-animation: rotating 2s linear infinite; }
+
+/* ==========  Select Field Variables ========== */
+/* ==========  Select Field ========== */
+/* Style Select Field */
+select {
+  font-family: inherit;
+  background-color: transparent;
+  width: 100%;
+  padding: 4px 0;
+  font-size: 16px;
+  color: rgba(0,0,0, 0.26);
+  border: none; }
+
+/* Remove focus */
+select:focus {
+  outline: none; }
+
+/* Hide label */
+.mdl-selectfield label {
+  display: none; }
+
+/* Use custom arrow */
+.mdl-selectfield select {
+  appearance: none; }
+
+.mdl-selectfield {
+  position: relative; }
+  .mdl-selectfield:after {
+    position: absolute;
+    top: 0.75em;
+    right: 0.5em;
+    /* Styling the down arrow */
+    width: 0;
+    height: 0;
+    padding: 0;
+    content: '';
+    border-left: .25em solid transparent;
+    border-right: .25em solid transparent;
+    border-top: 0.375em solid rgba(0,0,0, 0.06);
+    pointer-events: none; }
