--- a/app/css/app.css
+++ b/app/css/app.css
@@ -23,7 +23,7 @@ body.dragging #section-description {
     font-size: 90%; }
 
 .demo-card-square.mdl-card {
-  width: 320px;
+  width: 100%;
   height: 320px;
   border-radius: 0; }
 
@@ -110,6 +110,7 @@ body.dragging #queue {
   -webkit-animation: rotating 2s linear infinite; }
 
 /* ==========  Select Field Variables ========== */
+/* http://codepen.io/pudgereyem/pen/PqBxQx/ */
 /* ==========  Select Field ========== */
 /* Style Select Field */
 select {
