--- a/app/css/app.scss
+++ b/app/css/app.scss
@@ -25,7 +25,7 @@ body.dragging #section-description { margin-top: -70px; }
 }
 
 .demo-card-square.mdl-card {
-  width: 320px;
+  width: 100%;
   height: 320px;
   border-radius: 0;
 }
@@ -117,6 +117,7 @@ body.dragging {
 }
 
 /* ==========  Select Field Variables ========== */
+/* http://codepen.io/pudgereyem/pen/PqBxQx/ */
 
 $color-black: "0,0,0";
 $select-background-color: transparent;
